--- a/setup.cfg
+++ b/setup.cfg
@@ -4,8 +4,8 @@
 # https://setuptools.pypa.io/en/latest/references/keywords.html
 
 [metadata]
-name = metadata_reader
-description = Add a short description here!
+name = metaxtract
+description = It is a metadata extractor for few types of file extensions.
 author = chirayu patel
 author_email = Chirayupatel911@gmail.com
 license = MIT
@@ -58,7 +58,7 @@ exclude =
 
 [options.extras_require]
 # Add here additional requirements for extra features, to install with:
-# `pip install metadata_reader[PDF]` like:
+# `pip install metaxtract[PDF]` like:
 # PDF = ReportLab; RXP
 
 # Add here test requirements (semicolon/line-separated)
@@ -70,10 +70,10 @@ testing =
 [options.entry_points]
 # Add here console scripts like:
 # console_scripts =
-#     script_name = metadata_reader.module:function
+#     script_name = metaxtract.module:function
 # For example:
 # console_scripts =
-#     fibonacci = metadata_reader.skeleton:run
+#     fibonacci = metaxtract.skeleton:run
 # And any other entry points, for example:
 # pyscaffold.cli =
 #     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
@@ -120,4 +120,4 @@ exclude =
 # PyScaffold's parameters when the project was created.
 # This will be used when updating. Do not change!
 version = 4.6
-package = metadata_reader
+package = metaxtract
